[package]
name = "gn-ranking-client-rs"
version = "0.1.2"
edition = "2021"
description = "Client library for the gamenight ranking service"
license = "MIT"


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215" , features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
